i changed the design patter so the functionlaity of a piece (selection , moveing , ect ... ) is mosly implemented in the class

--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" >
     <title>Chess</title>
   </head>
   <body>
         <!-- the grid will be genrated in javascript -->
         <div class="bord" id="bord" ></div>
         <div class="bord-selected" id="bordSelected" ></div>
+    <script>
+
+      let BOARD_STATE = undefined
+
+      const init = async () => {
+
+    return new Promise( async (resolve , reject) => {
+
+    const storedBoaredStatus = await localStorage.getItem("BOARD-STATUS")
+
+    if(storedBoaredStatus) {
+        BOARD_STATUS = storedBoaredStatus
+        return resolve(true)
+    }
+  
+    BOARD_STATE = []
+
+    for(let i = 0 ; i < 8 ; i++)
+      BOARD_STATE.push([
+      undefined , undefined , undefined , undefined , undefined , undefined , undefined , undefined
+      ])
+
+      return resolve(true)
+
+    })
+}
+
+    (async function() {
+      await init()
+    })()
+
+    </script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
