implmented the Knight and the Rook piece

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       let BOARD_STATE = undefined
       let currentTeam = 1
 
+      const THEME = ["whtesmoke" , "rgb(193 152 89)" , "rgb(150,111,51)"]
+      // const THEME = ["#966F33" , "white" , "gray"]
+
       const init = async () => {
 
     return new Promise( async (resolve , reject) => {
