--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       let currentTeam = 1
 
       const THEME = ["whtesmoke" , "rgb(193 152 89)" , "rgb(150,111,51)"]
-      // const THEME = ["#966F33" , "white" , "gray"]
+      // const THEME = ["rgb(49,46,43)" , "rgb(118,150,86)" , "rgb(238,238,210)"]
 
       const init = async () => {
 
